// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Packer Lerna should aggregate any analytics 1`] = `
Object {
  "dependencies": Object {
    "external": Object {
      "debug": "*",
    },
    "internal": Array [
      Object {
        "description": "",
        "name": "@fixture/sub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsubsub",
        "private": false,
        "version": "0.1.3",
      },
    ],
    "peer": Object {
      "ansi-styles": "4.0.0",
      "debug": "*",
      "smallest": "1.0.1",
      "supports-color": "7.0.0",
    },
  },
  "graph": Object {
    "@fixture/main": Object {
      "external": Object {
        "ansi-styles": "4.0.0",
        "debug": "*",
        "smallest": "1.0.1",
        "supports-color": "7.0.0",
      },
      "internal": Object {
        "@fixture/subsub": "0.1.3",
        "@fixture/subsubsub": "0.1.3",
      },
    },
    "@fixture/sub": Object {
      "smallest": "1.0.1",
    },
    "@fixture/subsub": Object {
      "debug": "*",
    },
    "@fixture/subsubsub": Object {
      "ansi-styles": "4.0.0",
      "supports-color": "7.0.0",
    },
  },
  "integrity": "9b7401afee0e69a7b255b2c9e77d829aa023e68c71e4ff30694791ad62757e94",
}
`;

exports[`Packer Lerna should generate a hash for the packed bundle 1`] = `"de3c945615fd18040a760e9aca329fee9dba9e3dc23738ccbe01d02ab6535110"`;

exports[`Packer Lerna should generate a monopacker.analytics.json file 1`] = `
Object {
  "dependencies": Object {
    "external": Object {
      "debug": "*",
    },
    "internal": Array [
      Object {
        "description": "",
        "name": "@fixture/sub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsubsub",
        "private": false,
        "version": "0.1.3",
      },
    ],
    "peer": Object {
      "ansi-styles": "4.0.0",
      "debug": "*",
      "smallest": "1.0.1",
      "supports-color": "7.0.0",
    },
  },
  "graph": Object {
    "@fixture/main": Object {
      "external": Object {
        "ansi-styles": "4.0.0",
        "debug": "*",
        "smallest": "1.0.1",
        "supports-color": "7.0.0",
      },
      "internal": Object {
        "@fixture/subsub": "0.1.3",
        "@fixture/subsubsub": "0.1.3",
      },
    },
    "@fixture/sub": Object {
      "smallest": "1.0.1",
    },
    "@fixture/subsub": Object {
      "debug": "*",
    },
    "@fixture/subsubsub": Object {
      "ansi-styles": "4.0.0",
      "supports-color": "7.0.0",
    },
  },
  "integrity": "9b7401afee0e69a7b255b2c9e77d829aa023e68c71e4ff30694791ad62757e94",
}
`;

exports[`Packer Lerna should generate a monopacker.analytics.json file 2`] = `
Object {
  "dependencies": Object {
    "external": Object {
      "debug": "*",
    },
    "internal": Array [
      Object {
        "description": "",
        "name": "@fixture/sub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsub",
        "private": false,
        "version": "0.1.3",
      },
      Object {
        "description": "",
        "name": "@fixture/subsubsub",
        "private": false,
        "version": "0.1.3",
      },
    ],
    "peer": Object {
      "ansi-styles": "4.0.0",
      "debug": "*",
      "smallest": "1.0.1",
      "supports-color": "7.0.0",
    },
  },
  "graph": Object {
    "@fixture/main": Object {
      "external": Object {
        "ansi-styles": "4.0.0",
        "debug": "*",
        "smallest": "1.0.1",
        "supports-color": "7.0.0",
      },
      "internal": Object {
        "@fixture/subsub": "0.1.3",
        "@fixture/subsubsub": "0.1.3",
      },
    },
    "@fixture/sub": Object {
      "smallest": "1.0.1",
    },
    "@fixture/subsub": Object {
      "debug": "*",
    },
    "@fixture/subsubsub": Object {
      "ansi-styles": "4.0.0",
      "supports-color": "7.0.0",
    },
  },
  "integrity": "9b7401afee0e69a7b255b2c9e77d829aa023e68c71e4ff30694791ad62757e94",
}
`;

exports[`Packer Lerna should generate an artificial package correctly 1`] = `
Object {
  "dependencies": Object {
    "ansi-styles": "4.0.0",
    "debug": "*",
    "smallest": "1.0.1",
    "supports-color": "7.0.0",
  },
  "description": "",
  "monopacker": Object {
    "hash": "de3c945615fd18040a760e9aca329fee9dba9e3dc23738ccbe01d02ab6535110",
    "linked": Object {
      "@fixture/sub": "0.1.3",
      "@fixture/subsub": "0.1.3",
      "@fixture/subsubsub": "0.1.3",
    },
    "version": "0.1.16",
  },
  "name": "@fixture/main-packed",
  "version": "0.2.7",
}
`;

exports[`Packer Lerna should generate correct metadata for the packed bundle 1`] = `
Object {
  "hash": "de3c945615fd18040a760e9aca329fee9dba9e3dc23738ccbe01d02ab6535110",
  "linked": Object {
    "@fixture/sub": "0.1.3",
    "@fixture/subsub": "0.1.3",
    "@fixture/subsubsub": "0.1.3",
  },
  "version": "0.1.16",
}
`;
